feat(dashboard): fixed sidenav, implemented settings and implemented record generation
