# apps/api/src/app/repositories/record/record.module.ts
@@ -5,9 +5,15 @@ import { Record } from './entities';
 import { TypeOrmModule } from '@nestjs/typeorm';
 import { JwtAuthModule } from '../../auth/jwt-auth/jwtAuth.module';
 import { UsersModule } from '../users';
+import { ReportsModule } from '../../reports/reports.module';
 
 @Module({
-  imports: [TypeOrmModule.forFeature([Record]), UsersModule, JwtAuthModule],
+  imports: [
+    TypeOrmModule.forFeature([Record]),
+    UsersModule,
+    JwtAuthModule,
+    ReportsModule,
+  ],
   providers: [RecordService],
   controllers: [RecordController],
 })
